# Mentorium-Chat-Bot

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
apps/billing_service/mentorium_billing/: __init__.py  api.py  config.py  main.py  schemas.py  service.py
apps/reporting_worker/mentorium_reporting/: __init__.py  config.py  main.py
apps/reporting_worker/mentorium_reporting/jobs/: __init__.py  daily_reports.py
apps/telegram_bot/mentorium_bot/: __init__.py  config.py  dependencies.py  main.py  webhook_app.py
apps/telegram_bot/mentorium_bot/handlers/: __init__.py  billing.py  dialog.py  registration.py  states.py  webhooks.py
apps/telegram_bot/mentorium_bot/middleware/: __init__.py  subscription.py
apps/telegram_bot/mentorium_bot/services/: __init__.py  billing_service.py  notification_service.py  report_service.py
apps/telegram_bot/mentorium_bot/services/payment/: __init__.py  click.py  payme.py
docs/: DEPLOYMENT.md  ERROR_FIXES.md  PHASE_7_MONITORING.md  PROJECT_COMPLETE.md  PROJECT_OVERVIEW.md  SETUP_REPORT.md
infra/: docker-compose.yml
infra/terraform/: main.tf  variables.tf
infra/terraform/modules/network/: main.tf
scripts/: validate_env.py  verify_setup.py
tests/: test_parent_repository.py  test_smoke.py
